@@ -1,5 +1,6 @@
 Roadmap for 0.1.9
 - Add vms_from_folder method in VIServer
+- Added VIEventHistoryCollector class to retrieve vCenter events
 
 New in for 0.1.8
 - Added VIManagedEntity class extended by VIVirtualMachine
